--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-/src/components/pokedex.rest
+./src/components/pokedex.rest
 
 
 # dependencies
