--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokedex-backend",
+  "name": "pokedex",
   "version": "1.0.0",
   "description": "pokedex-backend",
   "main": "index.js",
