--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "pokedex-backend",
   "main": "index.js",
   "scripts": {
+    "start": "node .",
     "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
